dev:
 * adding function for cross correlation pick correction
 * removing pitsa-compatibility in response function calculation
   (no complex conjugate)
 * preventing a possible duplicated overall sensitivity removal in seisSim
   when using the option seedresp

0.7.0:
 * adding toolbox to calculate Time-Frequency Misfits
 * fixed bug in calculation of time derivatives
 * fixing a misleading entry point for trigger, adding a missing one
 * adding coincidence triggering routine