@@ -1,0 +1,12 @@
+@article{deFranco2001,
+author = {de Franco, Roberto and Musacchio, Gemma},
+doi = {10.1190/1.1444983},
+issn = {00168033},
+journal = {Geophysics},
+number = {3},
+pages = {932},
+title = {{Polarization filter with singular value decomposition}},
+url = {http://geophysics.geoscienceworld.org/content/66/3/932.short},
+volume = {66},
+year = {2001}
+}
