@@ -12,108 +12,113 @@ Citations
    | Allen, R. M. and Kanamori, H. (2003),
    | **The Potential for Earthquake Early Warning in Southern California**,
    | *Science*, 300 (5620), 786-789.
-   | http://www.sciencemag.org/content/300/5620/786.abstract
+   | http://www.sciencemag.org/content/300/5620/786.abstract
 .. [Baer1987]  
    | Baer, M. and Kradolfer, U. (1987),
    | **An automatic phase picker for local and teleseismic events**,
    | *Bulletin of the Seismological Society of America*, 77 (4), 1437-1445.
-   | http://www.bssaonline.org/content/77/4/1437.abstract
+   | http://www.bssaonline.org/content/77/4/1437.abstract
 .. [Beyreuther2010]  
    | Beyreuther, M., Barsch, R., Krischer, L., Megies, T., Behr, Y., and Wassermann, J. (May/June 2010),
    | **ObsPy: A Python Toolbox for Seismology**,
    | *Seismological Research Letters*, 81 (3), 530-533.
-   | http://www.seismosoc.org/publications/SRL/SRL_81/srl_81-3_es/
+   | http://www.seismosoc.org/publications/SRL/SRL_81/srl_81-3_es/
 .. [Deichmann1992]  
    | Deichmann, N. and Garcia-Fernandez, M. (1992),
    | **Rupture geometry from high-precision relative hypocentre locations of microearthquake clusters**,
    | *Geophysical Journal International*, 110 (3), 501-517.
-   | http://doi.wiley.com/10.1111/j.1365-246X.1992.tb02088.x
+   | http://doi.wiley.com/10.1111/j.1365-246X.1992.tb02088.x
 .. [Jurkevics1988]  
    | Jurkevics, A. (1988),
    | **Polarization analysis of three-component array data**,
    | *Bulletin of the Seismological Society of America*, 78 (5), 1725-1743.
-   | http://www.bssaonline.org/content/78/5/1725.abstract
+   | http://www.bssaonline.org/content/78/5/1725.abstract
 .. [Kanasewich1981]  
    | Kanasewich, E. R. (1981),
    | **Time sequence analysis in geophysics**,
    | Canadian electronic library: Books collection, University of Alberta Press, ISBN: 9780888640741.
-   | http://books.google.de/books?id=k8SSLy-FYagC
+   | http://books.google.de/books?id=k8SSLy-FYagC
 .. [Konno1998]  
    | Konno, K. and Ohmachi, T. (1998),
    | **Ground-motion characteristics estimated from spectral ratio between horizontal and vertical components of microtremor**,
    | *Bulletin of the Seismological Society of America*, 88 (1), 228-241.
-   | http://www.bssaonline.org/content/88/1/228.abstract
+   | http://www.bssaonline.org/content/88/1/228.abstract
 .. [Krieger2012]  
    | Krieger, L. and Heimann, S. (May/June 2012),
    | **MoPaD-Moment Tensor Plotting and Decomposition: A Tool for Graphical and Numerical Analysis of Seismic Moment Tensors**,
    | *Seismological Research Letters*, 83 (3), 589-595.
-   | http://srl.geoscienceworld.org/content/83/3/589.short
+   | http://srl.geoscienceworld.org/content/83/3/589.short
 .. [Kristekova2006]  
    | Kristekov\á, M., Kristek, J., Moczo, P., and Day, S. M. (2006),
    | **Misfit Criteria for Quantitative Comparison of Seismograms**,
    | *Bulletin of the Seismological Society of America*, 96 (5), 1836-1850.
-   | http://dx.doi.org/10.1785/0120060012
+   | http://dx.doi.org/10.1785/0120060012
 .. [Kristekova2009]  
    | Kristekov\á, M., Kristek, J., and Moczo, P. (2009),
    | **Time-frequency misfit and goodness-of-fit criteria for quantitative comparison of time signals**,
    | *Geophysical Journal International*, 178 (2), 813-825.
-   | http://dx.doi.org/10.1111/j.1365-246X.2009.04177.x
+   | http://dx.doi.org/10.1111/j.1365-246X.2009.04177.x
 .. [KvaernaRingdal1986]  
    | Kværna, T. and Ringdal, F. (1986),
    | **Stability of various f-k estimation techniques**,
-   | in *Scientific Report: Semiannual Technical Summary 1 - 1986/1987*, NORSAR, Kjeller, Norway.
+   | in *Scientific Report: Semiannual Technical Summary 1 - 1986/1987*, NORSAR, Kjeller, Norway.
 .. [McNamara2004]  
    | McNamara, D. E. and Buland, R. P. (2004),
    | **Ambient Noise Levels in the Continental United States**,
    | *Bulletin of the Seismological Society of America*, 94 (4), 1517-1527.
-   | http://www.bssaonline.org/content/94/4/1517.abstract
+   | http://www.bssaonline.org/content/94/4/1517.abstract
 .. [Megies2011]  
    | Megies, T., Beyreuther, M., Barsch, R., Krischer, L., and Wassermann, J. (2011),
    | **ObsPy - What can it do for data centers and observatories?**,
    | *Annals of Geophysics*, 54 (1).
-   | http://www.annalsofgeophysics.eu/index.php/annals/article/view/4838
+   | http://www.annalsofgeophysics.eu/index.php/annals/article/view/4838
 .. [Peterson2003]  
    | Peterson, J. (2003),
    | **Observations and Modeling of Seismic Background Noise**,
    | U.S. Geological Survey open-file report 93-322, Albuquerque, N.M.
-   | http://ehp3-earthquake.wr.usgs.gov/regional/asl/pubs/files/ofr93-322.pdf
+   | http://ehp3-earthquake.wr.usgs.gov/regional/asl/pubs/files/ofr93-322.pdf
 .. [Snoke2009]  
    | Snoke, J. A. (2009),
    | **Traveltime Tables for iasp91 and ak135**,
    | *Seismological Research Letters*, 80 (2), 260-262.
-   | http://srl.geoscienceworld.org/content/80/2/260.short
+   | http://srl.geoscienceworld.org/content/80/2/260.short
 .. [Spudich1995]  
    | Spudich, P., Steck, L. K., Hellweg, M., Fletcher, J. B., and Baker, L. M. (1995),
    | **Transient stresses at Parkfield, California, produced by the M 7.4 Landers earthquake of June 28, 1992: Observations from the UPSAR dense seismograph array**,
    | *J. Geophys. Res.*, 100 (B1), 675-690.
-   | http://dx.doi.org/10.1029/94JB02477
+   | http://dx.doi.org/10.1029/94JB02477
 .. [Spudich2008]  
    | Spudich, P. and Fletcher, J. B. (2008),
    | **Observation and Prediction of Dynamic Ground Strains, Tilts, and Torsions Caused by the Mw 6.0 2004 Parkfield, California, Earthquake and Aftershocks, Derived from UPSAR Array Observations**,
    | *Bulletin of the Seismological Society of America*, 98 (4), 1898-1914.
-   | http://www.bssaonline.org/content/98/4/1898.abstract
+   | http://www.bssaonline.org/content/98/4/1898.abstract
 .. [Spudich2009]  
    | Spudich, P. and Fletcher, J. B. (2009),
    | **Software for Inference of Dynamic Ground Strains and Rotations and Their Errors from Short Baseline Array Observations of Ground Motions**,
    | *Bulletin of the Seismological Society of America*, 99 (2B), 1480-1482.
-   | http://www.bssaonline.org/content/99/2B/1480.abstract
+   | http://www.bssaonline.org/content/99/2B/1480.abstract
 .. [Trnkoczy2012]  
    | Trnkoczy, A. (2012),
    | **Understanding and parameter setting of STA/LTA trigger algorithm**,
    | in *New Manual of Seismological Observatory Practice 2 (NMSOP-2)*, IS 8.1, 20 pp.
-   | http://nmsop.gfz-potsdam.de
+   | http://nmsop.gfz-potsdam.de
 .. [Tsuboi1995]  
    | Tsuboi, S., Abe, K., Takano, K., and Yamanaka, Y. (1995),
    | **Rapid determination of Mw from broadband P waveforms**,
    | *Bulletin of the Seismological Society of America*, 85 (2), 606-613.
-   | http://www.bssaonline.org/content/85/2/606.abstract
+   | http://www.bssaonline.org/content/85/2/606.abstract
 .. [Tsuboi1999]  
    | Tsuboi, S., Whitmore, P. M., and Sokolowski, T. J. (1999),
    | **Application of Mwp to deep and teleseismic earthquakes**,
    | *Bulletin of the Seismological Society of America*, 89 (5), 1345-1351.
-   | http://www.bssaonline.org/content/89/5/1345.abstract
+   | http://www.bssaonline.org/content/89/5/1345.abstract
 .. [Withers1998]  
    | Withers, M., Aster, R., Young, C., Beiriger, J., Harris, M., Moore, S., and Trujillo, J. (1998),
    | **A comparison of select trigger algorithms for automated global seismic phase and event detection**,
    | *Bulletin of the Seismological Society of America*, 88 (1), 95-106.
-   | http://www.bssaonline.org/content/88/1/95.abstract
+   | http://www.bssaonline.org/content/88/1/95.abstract
+.. [deFranco2001]  
+   | de Franco, R. and Musacchio, G. (2001),
+   | **Polarization filter with singular value decomposition**,
+   | *Geophysics*, 66 (3), 932.
+   | http://geophysics.geoscienceworld.org/content/66/3/932.short
