@@ -18,7 +18,9 @@ Various Seismogram Filtering Functions
 """
 
 import warnings
+import numpy as np
 from numpy import array, where, fft
+import scipy
 from scipy.fftpack import hilbert
 from scipy.signal import iirfilter, lfilter, remez, convolve, get_window, \
     cheby2, cheb2ord
@@ -365,6 +367,163 @@ def lowpassCheby2(data, freq, df, maxorder=12, ba=False,
     if freq_passband:
         return lfilter(b, a, data), wp * nyquist
     return lfilter(b, a, data)
+
+
+def polarizationFilter(x, y, z, wlen, details=False):
+    """
+    Three component polarization filter
+
+    Filter three component data based on polarization analysis using singular
+    value decomposition following the algorithm described by [deFranco2001]_.
+
+    .. note::
+
+        If ``x``, ``y`` and ``z`` are not of equal length, the shortest array
+        defines the length for processing and the rest of the data is
+        disregarded.
+
+    :type x: :class:`~numpy.ndarray`
+    :param x: Time series of first component (e.g. Z)
+    :type y: :class:`~numpy.ndarray`
+    :param y: Time series of second component (e.g. R).
+    :type z: :class:`~numpy.ndarray`
+    :param z: Time series of third component (e.g. T).
+    :type wlen: int
+    :param wlen: Length of non-overlapping window for singular value
+        decomposition in samples. Choice of window length depends on the signal
+        characteristics that should be enhanced. As an example, [deFranco2001]_
+        suggest a window of 0.5 seconds for signal with frequency content of
+        2-15 Hz and a dominant frequency of 5 Hz. If set to 0, the whole time
+        series is treated as one single window. Poor choice of ``wlen`` can
+        result in problems in the output.
+    :type details: bool
+    :param details: If selected, additional information on the polarization
+        filtering is returned (array of eigenimages, interpolated
+        rectilinearity 1/2 and planarity, discrete rectilinearity 1/2 and
+        planarity and indices of midpoints of discrete polarization
+        attributes).
+    :rtype: list of 3 :class:`~numpy.ndarray`
+    :return: The 3 components of original time series after polarization
+        filtering.
+    """
+    # use whole time series if window length 0 is specified
+    if wlen == 0:
+        wlen = len(x)
+
+    # check lengths of arrays, use shortest length
+    n = set([len(a) for a in x, y, z])
+    if len(n) > 1:
+        msg = "Data arrays are not of same length. Longer pieces are " + \
+              "disregarded."
+        warnings.warn(msg)
+    n = min(n)
+
+    raw_data = np.vstack((x[:n], y[:n], z[:n])).T
+
+    # eigenimages
+    # first index: samples
+    # second index: x/y/z
+    # third index: number of eigenimage
+    e = np.empty(shape=(n, 3, 2), dtype="float64")
+
+    # indices of starts of windows
+    inds = np.arange(0, n, wlen)
+    # indices of ends of windows
+    inds2 = inds + wlen
+    # if the last window is less than a certain amount of window length,
+    # add it to the previous window in processing instead
+    if (n - 1) % wlen < 0.6 * wlen:
+        inds = inds[:-1]
+        inds2 = inds2[:-1]
+    inds2[-1] = n - 1
+    inds_startend = np.vstack((inds, inds2)).T
+    num_windows = len(inds)
+
+    # polarization attributes stored per window first, interpolated later
+    r1_disc = np.empty(num_windows, dtype="float64")
+    r2_disc = np.empty(num_windows, dtype="float64")
+    p_disc = np.empty(num_windows, dtype="float64")
+
+    for i, (ind, ind2) in enumerate(inds_startend):
+        u, w, v = np.linalg.svd(raw_data[ind:ind2, :], full_matrices=False)
+        # sort from larger to smaller eigenvalues
+        descending = w.argsort()[::-1]
+        u = u[:, descending]
+        w = w[descending]
+        v = v[:, descending]
+
+        # store rectilinearities and planarity for window
+        r1_disc[i] = 1 - (pow(w[2], 2) / pow(w[0], 2))
+        r2_disc[i] = 1 - (pow(w[2], 2) / pow(w[1], 2))
+        p_disc[i] = 1 - (2 * pow(w[2], 2) / (pow(w[0], 2) + pow(w[1], 2)))
+
+        # XXX need to transpose v?!?
+        ## v = v.T
+        e[ind:ind2, 0, 0] = u[:, 0] * v[0, 0] * w[0]
+        e[ind:ind2, 1, 0] = u[:, 0] * v[1, 0] * w[0]
+        e[ind:ind2, 2, 0] = u[:, 0] * v[2, 0] * w[0]
+        e[ind:ind2, 0, 1] = u[:, 1] * v[0, 1] * w[1]
+        e[ind:ind2, 1, 1] = u[:, 1] * v[1, 1] * w[1]
+        e[ind:ind2, 2, 1] = u[:, 1] * v[2, 1] * w[1]
+        # the third eigenimage is not used
+        #e[ind:ind2, 0, 2] = u[:, 2] * v[0, 2] * w[2]
+        #e[ind:ind2, 1, 2] = u[:, 2] * v[1, 2] * w[2]
+        #e[ind:ind2, 2, 2] = u[:, 2] * v[2, 2] * w[2]
+
+    # interpolate polarization attributes from midpoints to whole time series
+    midpoints = inds + (wlen / 2)
+    midpoints[-1] = inds[-1] + (((n - 1) % wlen) / 2)
+    all_inds = np.arange(n)
+    # cubic spline interpolation
+    if num_windows > 3:
+        spline = scipy.interpolate.InterpolatedUnivariateSpline(midpoints,
+                                                                r1_disc)
+        r1 = spline(all_inds)
+        spline = scipy.interpolate.InterpolatedUnivariateSpline(midpoints,
+                                                                r2_disc)
+        r2 = spline(all_inds)
+        spline = scipy.interpolate.InterpolatedUnivariateSpline(midpoints,
+                                                                p_disc)
+        p = spline(all_inds)
+    # linear interpolation
+    elif num_windows > 1:
+        interp = scipy.interpolate.interp1d(midpoints, r1_disc,
+                                            bounds_error=False)
+        r1 = interp(all_inds)
+        r1[:midpoints[0]] = r1[midpoints[0]]
+        r1[midpoints[-1]:] = r1[midpoints[-1]]
+        interp = scipy.interpolate.interp1d(midpoints, r2_disc,
+                                            bounds_error=False)
+        r2 = interp(all_inds)
+        r2[:midpoints[0]] = r2[midpoints[0]]
+        r2[midpoints[-1]:] = r2[midpoints[-1]]
+        interp = scipy.interpolate.interp1d(midpoints, p_disc,
+                                            bounds_error=False)
+        p = interp(all_inds)
+        p[:midpoints[0]] = p[midpoints[0]]
+        p[midpoints[-1]:] = p[midpoints[-1]]
+    # constant value
+    else:
+        r1 = np.empty(n, dtype="float64")
+        r2 = np.empty(n, dtype="float64")
+        p = np.empty(n, dtype="float64")
+        r1.fill(r1_disc[0])
+        r2.fill(r2_disc[0])
+        p.fill(p_disc[0])
+
+    # interpolation can cause values outside of theoretical bounds, clip those
+    r1 = np.clip(r1, 0.0, 1.0)
+    r2 = np.clip(r2, 0.0, 1.0)
+    p = np.clip(p, 0.0, 1.0)
+
+    # calculate filtered time series as weighted sum of eigenimages
+    x_filt = (e[:, 0, 0] * r1 + e[:, 0, 1] * r2) * p
+    y_filt = (e[:, 1, 0] * r1 + e[:, 1, 1] * r2) * p
+    z_filt = (e[:, 2, 0] * r1 + e[:, 2, 1] * r2) * p
+    if details:
+        return x_filt, y_filt, z_filt, e, r1, r2, p, r1_disc, r2_disc, p_disc, midpoints
+    else:
+        return x_filt, y_filt, z_filt
 
 
 if __name__ == '__main__':
